Cant fugure out how to stop that overflowing(scroll issue) & need help on accouncement and trending

--- a/style.css
+++ b/style.css
@@ -118,24 +118,20 @@ body{
     display:grid;
     grid-template-columns:70% 30%;
     background-color: #e0e9f4;
-    height: 100%;
-    overflow: hidden;
 }
 
 .project{
     display: flex;
-    height: 100%;
     flex-direction: column;
 }
 
 .project-grid{
-    flex:1;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+
     gap: 20px;
     padding: 0px 20px 50px 20px;
-    height: 100%;
 }
 
 .project-solo{
@@ -148,6 +144,9 @@ body{
     border-radius: 8px;
     border-left: 5px solid rgb(241, 225, 52);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .project-name{
@@ -167,4 +166,27 @@ body{
 }
 .icons img{
     height: 18px;
+}
+
+.main-right{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    box-sizing: border-box;
+}
+.profiles{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    gap: 10px;
+    background-color: white;
+    height: 100%;
+}
+
+.profile{
+    display: flex;
+    justify-content: flex-start;
+    gap: 4px;
+    align-items: center;
 }
